cmake_minimum_required(VERSION 3.25)
project(VulkanPlayground)
set(CMAKE_CXX_STANDARD 20)
if (MSVC)
    add_compile_options(/W4)
else()
    add_compile_options(-Wall -Wextra -pedantic)
endif()
find_package(Vulkan REQUIRED)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/glfw)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/spdlog)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/external/vk-bootstrap)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/external/glm)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/external/VulkanMemoryAllocator/include)
link_libraries(glfw spdlog vk-bootstrap Vulkan::Vulkan)
add_executable(Triangle src/HelloTriangle/main.cpp)